# KgSem4_2026

KG_Sem4_Laba1/: CMakeLists.txt
KG_Sem4_Laba1/assets/: sponza.mtl
KG_Sem4_Laba1/h/: DirectXApp.h  Material.h  ObjectConstants.h  Parser.h
KG_Sem4_Laba1/src/: DirectXApp.cpp  Parser.cpp  shaders.hlsl
